<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ListPreference
        android:defaultValue="@string/pref_county_taipei_city"
        android:entries="@array/pref_county_options"
        android:entryValues="@array/pref_county_values"
        android:key="@string/pref_key_county"
        android:title="@string/pref_county_label" />

    <ListPreference
        android:defaultValue="@string/pref_county_taipei_city"
        android:entries="@array/pref_county_options"
        android:entryValues="@array/pref_county_values"
        android:key="@string/pref_key_secondary_county"
        android:title="@string/pref_secondary_county_label" />

    <ListPreference
        android:defaultValue="@string/pref_language_eng"
        android:entries="@array/pref_language_options"
        android:entryValues="@array/pref_language_values"
        android:key="@string/pref_key_language"
        android:title="@string/pref_language_label"
        />
</PreferenceScreen>